# backend_depal

./: README.md  config.yaml  environment.yml  main.py  pyproject.toml  server.py  test_api.py
documents/: mapping.json
src/: config.py  ui_components.py  utils.py
