[tool.poetry]
name = "api-and-view"
version = "0.1.0"
description = "server + client, request file and visualize results"
authors = ["Nicolò Bonincontro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
requests = "^2.32.4"
customtkinter = "^5.2.2"
pillow = "^11.3.0"
open3d = "^0.19.0"
numpy = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
